--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://tracholar2.top
+url: https://www.tracholar.top
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -79,4 +79,4 @@ theme: Jacman
 deploy:
   type: git
   repo: git@github.com:tracholar2/tracholar2.github.io.git
-  branch: gh-pages
+  branch: master
